Change decoding of bytes